<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/blur_back"
    android:id="@+id/main_layout"
    tools:context=".Qwordie_activity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight=".1"
            android:weightSum="1"
            android:layout_height="0dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:layout_weight=".1"
                android:id="@+id/back" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="match_parent"></LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:id="@+id/imageView2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight=".35"
            android:layout_height="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/main_pic"

                android:id="@+id/imageView3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight=".4"
            android:gravity="center"
            android:layout_height="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Extra"
                android:textStyle="bold"
                android:onClick="onClick"
                android:textColor="@color/white"
                android:id="@+id/exta_cards" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/How"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/how_to_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Buy"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/buy_the_game" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight=".15"
            android:layout_height="0dp"></LinearLayout>
    </LinearLayout>

</RelativeLayout>
