<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/bod_background"
    android:id="@+id/main_layout"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight=".5"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/bod_mainpic"

                    android:id="@+id/imageView3" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"

                    android:weightSum="1"
                    android:gravity="right|center"
                    android:layout_height="50dp">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/back"
                        android:layout_weight=".1"
                        android:background="@null"
                        android:visibility="visible"
                        android:id="@+id/back_bod" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"></LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:textColor="#FFFF00"
                        android:id="@+id/hashtag_b"
                        android:text="#BucketOfDoom" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight=".35"

            android:gravity="top"
            android:layout_height="0dp">


            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/How"
                android:textStyle="bold"
                android:layout_marginBottom="18dp"
                android:textColor="@color/white"
                android:id="@+id/how_to_play_bod" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Extra"

                android:layout_marginBottom="18dp"
                android:onClick="onClick"
                android:textColor="@color/white"
                android:id="@+id/exta_cards_bod" />
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Scenario"

                android:layout_marginBottom="18dp"
                android:onClick="onClick"
                android:textColor="@color/white"
                android:id="@+id/exta_cards_scen_bod" />



            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Buy"

                android:textColor="@color/white"

                android:id="@+id/buy_the_game_bod" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="170dp"
        android:layout_marginBottom="110dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView6s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@mipmap/bod_sticker"
            android:visibility="gone"
            />
    </LinearLayout>


</RelativeLayout>
