<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/obla_play_back"
    android:id="@+id/main_layout"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight=".5"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight=".1"
                    android:weightSum="1"
                    android:gravity="right|center"
                    android:layout_height="50dp">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/back"
                        android:background="@null"
                        android:layout_weight=".1"
                        android:visibility="visible"
                        android:id="@+id/back_scrawl_obla" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight=".6"
                        android:layout_height="match_parent"></LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="center|left"
                        android:text="#ObamaLlama"
                        android:textColor="#E95296"
                        android:id="@+id/hashtag3"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:gravity="top|center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/obla_main"
                        android:gravity="top|center"
                        android:id="@+id/imageView3" />


                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight=".35"

            android:gravity="top"
            android:layout_height="0dp">


            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/How"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:id="@+id/how_to_play_scrawl_obla" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Extra"

                android:layout_marginBottom="20dp"
                android:onClick="onClick"
                android:textColor="@color/white"
                android:id="@+id/exta_stopwatch_scrawl" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Obama Llama timer"

                android:layout_marginBottom="20dp"
                android:onClick="onClick"
                android:textColor="@color/white"
                android:id="@+id/exta_cards_scrawl_oblatimer" />





            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Buy"

                android:textColor="@color/white"

                android:id="@+id/buy_the_game_scrawl_obla" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="170dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@mipmap/obla_sticker"
            android:visibility="gone"
            />
    </LinearLayout>
</RelativeLayout>
